--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpeg" href="https://ik.imagekit.io/8iprf8rg8/image%20(2).jfif%22" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tmr-exports</title>
+    <title>TMR-exports</title>
+    <meta property="og:image" content="https://ik.imagekit.io/8iprf8rg8/image%20(2).jfif" />
+    <meta
+      property="og:description"
+      content=" Premium Rice Exports · Worldwide"
+    />
   </head>
   <body>
     <div id="root"></div>
